--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.4",
+    "echarts": "^4.9.0",
     "element-ui": "^2.15.12",
     "json2csv": "^5.0.1",
     "popper.js": "^1.16.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vue-socket.io": "^3.0.9",
@@ -28,10 +30,11 @@
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
+    "@vue/composition-api": "^1.7.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
